{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "a94d6be0-6abe-42af-a015-69e19957f913",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "8801f539-3f4b-4d4a-957d-c523de7925df",
                    "expectedControlType": "Dpad",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "a0096187-b71c-433c-b0c9-0690423651a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "5fcc8c0d-c580-4d14-876b-17b7d4dc37c0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2ea3ed7c-b199-4d5f-baa8-cdbc209c84ac",
                    "expectedControlType": "Button",
                    "processors": "Normalize(max=1)",
                    "interactions": "Press,MultiTap"
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "a0b411c1-5f95-4e60-879f-1c16f6d37859",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press,MultiTap"
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "79fe399e-0125-413c-bf67-cab3a9371598",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0092768d-85dc-472c-9e1b-acfd07f2fc97",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b0a951fc-3ead-45b5-b423-c61c48039ec6",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8984500e-5877-495e-a542-ce6434ee92e3",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6f1e71d9-183b-4269-9de0-a2a2bdf96e7b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "30bb0dc9-ae88-4b8a-9928-2931663d78be",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "335bc6a6-e4e6-46d5-8346-0d5a9c59d98e",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=0.1,y=0.02)",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3fba99fe-b3ec-4da4-8cd0-31caff013cfc",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b76ce001-3ff1-4436-a870-8f07c792b0e2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": []
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": []
        }
    ]
}